// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateSubscriptions should match a snapshot with subscriptions and applicationListing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <form>
        <div
          class="el-mt5 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Is Subscribed 
              Application Listing
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                class="el-toggle-radio"
                id="option-subscribed-true-MOCK_UUID"
                name="isSubscribed"
                type="radio"
                value="SUBSCRIBED"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-subscribed-true-MOCK_UUID"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Subscribed
                </span>
              </label>
              <input
                checked=""
                class="el-toggle-radio"
                id="option-subscribed-false-MOCK_UUID"
                name="isSubscribed"
                type="radio"
                value="NOT_SUBSCRIBED"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-subscribed-false-MOCK_UUID"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Not Subscribed
                </span>
              </label>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <form>
      <div
        class="el-mt5 el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <label
            class="el-label"
          >
            Is Subscribed 
            Application Listing
          </label>
          <div
            class="el-has-grey-bg el-toggle-radio-wrap"
          >
            <input
              class="el-toggle-radio"
              id="option-subscribed-true-MOCK_UUID"
              name="isSubscribed"
              type="radio"
              value="SUBSCRIBED"
            />
            <label
              class="el-has-grey-bg el-toggle-radio-label"
              for="option-subscribed-true-MOCK_UUID"
            >
              <span
                class="el-toggle-radio-item"
              >
                Subscribed
              </span>
            </label>
            <input
              checked=""
              class="el-toggle-radio"
              id="option-subscribed-false-MOCK_UUID"
              name="isSubscribed"
              type="radio"
              value="NOT_SUBSCRIBED"
            />
            <label
              class="el-has-grey-bg el-toggle-radio-label"
              for="option-subscribed-false-MOCK_UUID"
            >
              <span
                class="el-toggle-radio-item"
              >
                Not Subscribed
              </span>
            </label>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CreateSubscriptions should match a snapshot with subscriptions and developerRegistration 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <form>
        <div
          class="el-mt5 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Is Subscribed 
              Developer Registration
            </label>
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            >
              <input
                checked=""
                class="el-toggle-radio"
                id="option-subscribed-true-MOCK_UUID"
                name="isSubscribed"
                type="radio"
                value="SUBSCRIBED"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-subscribed-true-MOCK_UUID"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Subscribed
                </span>
              </label>
              <input
                class="el-toggle-radio"
                id="option-subscribed-false-MOCK_UUID"
                name="isSubscribed"
                type="radio"
                value="NOT_SUBSCRIBED"
              />
              <label
                class="el-has-grey-bg el-toggle-radio-label"
                for="option-subscribed-false-MOCK_UUID"
              >
                <span
                  class="el-toggle-radio-item"
                >
                  Not Subscribed
                </span>
              </label>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <form>
      <div
        class="el-mt5 el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <label
            class="el-label"
          >
            Is Subscribed 
            Developer Registration
          </label>
          <div
            class="el-has-grey-bg el-toggle-radio-wrap"
          >
            <input
              checked=""
              class="el-toggle-radio"
              id="option-subscribed-true-MOCK_UUID"
              name="isSubscribed"
              type="radio"
              value="SUBSCRIBED"
            />
            <label
              class="el-has-grey-bg el-toggle-radio-label"
              for="option-subscribed-true-MOCK_UUID"
            >
              <span
                class="el-toggle-radio-item"
              >
                Subscribed
              </span>
            </label>
            <input
              class="el-toggle-radio"
              id="option-subscribed-false-MOCK_UUID"
              name="isSubscribed"
              type="radio"
              value="NOT_SUBSCRIBED"
            />
            <label
              class="el-has-grey-bg el-toggle-radio-label"
              for="option-subscribed-false-MOCK_UUID"
            >
              <span
                class="el-toggle-radio-item"
              >
                Not Subscribed
              </span>
            </label>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
